# Next-Game

./: .gitignore  .npmrc  CLAUDE.md  README.md  auth.ts  eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/auth/register/: route.ts
app/auth/signin/: page.tsx
app/explore/: page.tsx
components/: auth-button.tsx  auth-form.tsx  bevy-game.tsx  navbar.tsx
game/: Cargo.toml  build.sh
game/src/: lib.rs
lib/: config.ts  db.ts  user.ts
